[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/match/match_scene.gd" type="Script" id=1]
[ext_resource path="res://scenes/settings/settings scene.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/match/combat/combat_power_balance.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/match/card_list.tscn" type="PackedScene" id=5]
[ext_resource path="res://camera2d.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/card/large_card_view.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/match/ui/states_detail_view.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/match/combat/combat_overlap.tscn" type="PackedScene" id=10]
[ext_resource path="res://fonts/ShipporiAntique-Medium.otf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=16]
size = 24
font_data = ExtResource( 12 )

[node name="MatchScene" type="Node"]
script = ExtResource( 1 )

[node name="BGLayer" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_enable = true

[node name="PowerBalance" parent="BGLayer" instance=ExtResource( 4 )]
visible = false
margin_top = 128.0
margin_bottom = -128.0

[node name="CardLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="TopUILayer" type="CanvasLayer" parent="."]
layer = 3
follow_viewport_enable = true

[node name="SettingButton" type="Button" parent="TopUILayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 56.0
grow_horizontal = 0
custom_fonts/font = SubResource( 16 )
text = "SETTINGS"

[node name="StatesDetailView" parent="TopUILayer" instance=ExtResource( 9 )]
visible = false

[node name="CardList" parent="TopUILayer" instance=ExtResource( 5 )]
unique_name_in_owner = true
visible = false
large_card_view = NodePath("../../LargeCardLayer/LargeCardView")

[node name="OverlapLayer" type="CanvasLayer" parent="."]
layer = 4
follow_viewport_enable = true

[node name="CombatOverlap" parent="OverlapLayer" instance=ExtResource( 10 )]
unique_name_in_owner = true
visible = false

[node name="LargeCardLayer" type="CanvasLayer" parent="."]
layer = 9

[node name="LargeCardView" parent="LargeCardLayer" instance=ExtResource( 8 )]
unique_name_in_owner = true
visible = false

[node name="SettingsLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="SettingsScene" parent="SettingsLayer" instance=ExtResource( 2 )]
unique_name_in_owner = true
visible = false

[node name="LimitTimer" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" parent="." instance=ExtResource( 6 )]
unique_name_in_owner = true
anchor_mode = 1
current = false

[connection signal="pressed" from="TopUILayer/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="timeout" from="LimitTimer" to="." method="_on_LimitTimer_timeout"]
